code/rules.v4
# Generated by iptables-save v1.6.0 on Sat Jul 15 17:37:28 2017
*filter
:INPUT DROP [36:2152]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [157:24528]
:repeat-offenders - [0:0]
-A INPUT -j repeat-offenders
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A repeat-offenders -s 186.58.0.0/15     -j DROP -m comment --comment "Argentina"
-A repeat-offenders -s 91.197.232.0/23   -j DROP -m comment --comment "Chech Republic"
-A repeat-offenders -s 39.128.0.0/10     -j DROP -m comment --comment "China"
-A repeat-offenders -s 42.159.0.0/16     -j DROP -m comment --comment "China"
-A repeat-offenders -s 58.208.0.0/12     -j DROP -m comment --comment "China"
-A repeat-offenders -s 61.177.0.0/16     -j DROP -m comment --comment "China"
-A repeat-offenders -s 61.134.64.0/24    -j DROP -m comment --comment "China"
-A repeat-offenders -s 111.192.0.0/12    -j DROP -m comment --comment "China"
-A repeat-offenders -s 114.224.0.0/12    -j DROP -m comment --comment "China"
-A repeat-offenders -s 116.16.0.0/12     -j DROP -m comment --comment "China"
-A repeat-offenders -s 119.248.0.0/14    -j DROP -m comment --comment "China"
-A repeat-offenders -s 121.16.0.0/13     -j DROP -m comment --comment "China"
-A repeat-offenders -s 122.114.0.0/16    -j DROP -m comment --comment "China"
-A repeat-offenders -s 123.180.0.0/14    -j DROP -m comment --comment "China"
-A repeat-offenders -s 180.76.0.0/16     -j DROP -m comment --comment "China"
-A repeat-offenders -s 202.10.64.0/20    -j DROP -m comment --comment "China"
-A repeat-offenders -s 218.64.0.0/16     -j DROP -m comment --comment "China"
-A repeat-offenders -s 218.65.0.0/17     -j DROP -m comment --comment "China"
-A repeat-offenders -s 221.192.0.0/14    -j DROP -m comment --comment "China"
-A repeat-offenders -s 222.197.64.0/20   -j DROP -m comment --comment "China"
-A repeat-offenders -s 88.174.0.0/15     -j DROP -m comment --comment "France"
-A repeat-offenders -s 163.172.154.75/24 -j DROP -m comment --comment "France"
-A repeat-offenders -s 80.211.241.134/24 -j DROP -m comment --comment "Italy"
-A repeat-offenders -s 46.174.64.0/21    -j DROP -m comment --comment "Ukraine"
-A repeat-offenders -s 190.85.0.0/16     -j DROP -m comment --comment "Colombia"
-A repeat-offenders -s 161.139.0.0/16    -j DROP -m comment --comment "Malaysia"
-A repeat-offenders -s 132.248.0.0/16    -j DROP -m comment --comment "Mexico"
-A repeat-offenders -s 103.230.84.0/23   -j DROP -m comment --comment "India"
-A repeat-offenders -s 203.129.224.0/23  -j DROP -m comment --comment "India"
-A repeat-offenders -s 210.212.210.86/24 -j DROP -m comment --comment "India"
-A repeat-offenders -s 188.225.8.0/20    -j DROP -m comment --comment "Russia"
-A repeat-offenders -j RETURN
COMMIT
# Completed on Sat Jul 15 17:37:28 2017
